--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,9 @@ img-top-8 {
 
 /* ----------------MOBILE RESPONSIVE DESIGN-------------- */
 @media screen and (max-width: 425px) {
+  .hide-for-mobile {
+    display: none;
+  }
 }
 
 
