--- a/css/normalize.css
+++ b/css/normalize.css
@@ -347,3 +347,9 @@ template {
 [hidden] {
   display: none;
 }
+
+h1,h2,h3, h4, h5, h6 {
+  font-size: 1em;
+  font-weight: normal;
+  margin: 0; /* or ‘0 0 1em’ if you’re so inclined */
+  }
