--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,13 @@ header {
 
 /* --------------------MAIN SECTION (CARDS) --------------------*/
 
+
+.near-you {
+  font-size: 2em;
+  font-weight: bold;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
 /*--------------------INDIV CARDS---------------------- */
 .cards {
   border: solid blue;
