--- a/css/normalize.css
+++ b/css/normalize.css
@@ -353,3 +353,8 @@ h1,h2,h3, h4, h5, h6 {
   font-weight: normal;
   margin: 0; /* or ‘0 0 1em’ if you’re so inclined */
   }
+
+  ul, ol {
+    list-style:none;
+    padding-left:0;
+  }
