--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+/* fonts 
+Black Russian: #151618
+Dark Olive Green: #556B2F
+Olive Green: #A9A454
+Quarter Spanish White: #EFE4D4
+Bourbon: #b07946 
+   shade lighter still: #b68557*/
+
+
 * {
   font-family: sans-serif;
   color: #151618;
@@ -24,24 +33,53 @@ main {
   width: 90%;
   margin: 0 auto;
 }
+
+body {
+  background-color: #EFE4D4;
+}
 /* 
 -----------------HEADER----------------- */
-header {
-  border: solid red;
+.main-header {
+ background-color: #556b2f;
+ height: 150px;
+ display: flex;
+ flex-direction: columns;
+ justify-content: space-between;
+ align-content: flex-end;
 }
 
+/* ---------------nav bar------------- */
+nav {
+  display: flex;
+  align-items: flex-end;
+}
 
+ol {
+  display: flex;
+}
+
+li {
+  margin: 10px;
+}
 /* //if space at top of file */
 /* h1 {
   margin-top: 0;
 } */
 
+.user {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.login {
+ margin: 10px;
+}
 /* --------------------MAIN SECTION (CARDS) --------------------*/
 
 
 .near-you {
   font-size: 2em;
-  font-weight: bold;
+  font-weight: 450;
   padding-top: 40px;
   padding-bottom: 40px;
 }
@@ -67,7 +105,7 @@ header {
 .card {
   display: flex;
   flex-direction: column;
-  background-color: pink;
+  background-color: white;
   min-height: 375px;
 }
 
@@ -169,26 +207,33 @@ card-image-8 {
   display: flex; 
   flex-direction: column; 
   background-color: cadetblue;
-  flex: 1;
+  /* flex: 1;
+  margin: 0;
+  padding: 0; */
 }
 
 .feature {
   /* flex: 1; */
+  /* margin: 0;
+  padding: 0; */
 }
 
 .feature-p {
-  margin: 0;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 12px;
 }
 
 .address-container {
   display: flex;
-  background-color: darkgoldenrod;
+  background-color: #b68557 ;
   height: 22%;
   align-items: center;
   margin-left: 10px;
   margin-right: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
+  
  
 }
 
@@ -209,6 +254,7 @@ card-image-8 {
 
 .number-rating {
   font-size: 1.5em;
+  color: #556b2f;
 }
 
 /* within-rating-container */
