--- a/css/styles.css
+++ b/css/styles.css
@@ -72,8 +72,16 @@ ol {
 }
 
 li {
-  margin: 10px;
+  margin: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.nav-icon {
+ margin-right: 10px;
+}
+
 /* //if space at top of file */
 /* h1 {
   margin-top: 0;
@@ -104,6 +112,10 @@ li {
   font-weight: bolder;
 }
 
+.nearby {
+  color: #EFE4D4;
+}
+
 /* ---------image */
 
 .coffee-cup {
@@ -113,12 +125,15 @@ li {
   width: 30px;
 }
 
+
+
 /* --------------------MAIN SECTION (CARDS) --------------------*/
 
 
 .near-you {
   font-size: 2em;
-  font-weight: 450;
+  opacity: .7;
+  font-weight: 480;
   padding-top: 40px;
   padding-bottom: 40px;
 }
@@ -278,10 +293,16 @@ card-image-7 {
 .feature {
   /* display: inline; */
   /* margin-bottom: 3px; */
+  display: flex; 
+  align-items: center;
+ 
+  
+
 }
 
 .feature-img {
   size: 80%;
+
 }
 
 .feature-p {
@@ -290,6 +311,7 @@ card-image-7 {
   margin-right: 10px;
   font-size: 12px;
   line-height: 40px;
+  margin-top: 0px;
 }
 
 .address-container {
