--- a/css/styles.css
+++ b/css/styles.css
@@ -42,9 +42,15 @@ img {
   margin: 0 auto;
 }
 
-main {
+main, .header-container {
   width: 90%;
   margin: 0 auto;
+}
+
+.header-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 body {
@@ -161,7 +167,7 @@ li {
   flex-direction: column;
   background-color: white;
   min-height: 375px;
-  opacity: 0.75;
+  opacity: 0.65;
 }
 
 /* -------- CARD TOP -------- */
@@ -181,15 +187,17 @@ li {
   display: flex;
   flex-direction: column;
   margin: 20px;
+  align-items: center;
+ 
 }
 
 .miles-label {
-font-size: 10px;
+font-size: 16px;
 }
 
 .miles {
-font-size: 20px;
-font-weight: 700;
+font-size: 35px;
+font-weight: 500;
 /* line-height: ; */
 }
 
@@ -253,8 +261,8 @@ card-image-7 {
   display: flex;
   justify-content: space-between;
   height: 51%;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 18px;
+  margin-right: 18px;
 }
 /* within details */
 .name-and-hours {
@@ -262,6 +270,7 @@ card-image-7 {
   flex-direction: column;
   /* background-color: bisque; */
   flex: 1;
+  margin-top: 6px;
 }
 
 .shop-name, .hours {
@@ -277,12 +286,15 @@ card-image-7 {
 .hours {
   margin-top: 0px;
   color: hsl(225, 2%, 36%); 
+  font-size: .7em;
+  margin-left: 2px;
 }
 
 .shop-features {
   display: flex; 
   flex-direction: column; 
   justify-content: space-around;
+  /* margin-right: 15px; */
 
   margin-top: 10px;
   /* flex: 1;
@@ -319,10 +331,11 @@ card-image-7 {
   background-color: #b68557 ;
   height: 22%;
   align-items: center;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 18px;
+  margin-right: 18px;
   margin-top: 10px;
   margin-bottom: 10px;
+  border-radius: 3px;
   
  
 }
@@ -331,6 +344,7 @@ card-image-7 {
  color: hsl(240, 1%, 14%); 
  padding: 6px;
  font-size: .8em;
+ /* font-weight: 1.5em; */
  padding-right: 15px;
 }
 
@@ -338,8 +352,8 @@ card-image-7 {
   display: flex;
   flex-direction: column;
   height: 27%;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 18px;
+  margin-right: 18px;
   /* margin: 10px; */
 }
 
@@ -352,12 +366,14 @@ card-image-7 {
   font-size: 1.5em;
   color: #556b2f;
   margin-right: 12px;
+  margin-left: 6px;
 }
 
 /* within-rating-container */
 .num-rating-container {
 
   display: flex;
+  align-items: center;
 }
 
 .star-container {
