Add responsive properties

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,7 @@ ol {
 
 li {
   margin: 20px;
+  margin-left: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -152,8 +153,6 @@ li {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   /* grid-template-columns: repeat(5, 20vw);
   grid-template-rows: repeat(3, 20vw); */
-
-
 
   grid-gap: 20px;
   /* grid-template-columns: repeat(3, 1fr); */
@@ -391,26 +390,92 @@ card-image-7 {
     display: none;
   }
 
-  /* ----------CARD BOTTOM--------------- */
-  .mobile-details {
-    border: dashed red;
-  }
-
-  .cards {
-    /* //change this below. */
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  .header-container-mobile {
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+    padding: 20px;
+    margin: 0 auto;
 
   }
+
+  .name-logo {
+    font-size: 15px;
+  }
+
+  .mobile-user-img {
+    height: 50px;
+    width: 50px;
+    margin: 10px;
+  }
+
+  article:nth-child(1) {
+    margin-top: 10px;
+  }
+
+
+.cards {
+  grid-gap: 2px;
+}
+
+.card {
+  min-height: 325px;
+}
+
+  /* ----------CARD --------------- */
+  .details-container {
+    display: flex;
+    justify-content: center;
+ 
+  }
+
+  .shop-features {
+    display: flex;
+    flex-direction: row;
+    align-items: space-around;
+  }
+
+  .feature-img {
+    padding: 6px;
+    height: 35px;
+    width: 35px;
+  }
+
+
+.num-rating-container {
+  display: flex;
+  justify-content: center;
+}
+
+.card-top {
+  margin: 20px;
+  border-radius: 3px;
+}
+
+.shop-title-mobile {
+  font-size: 20px;
+  margin: 9px;
+}
+
+
+  
   
 }
 
-/* //do I use this below? */
-@media screen and (max-width: 1200px) and (min-width: 1025px) {
+@media screen and (min-width: 450px) {
   .hide-for-desktop {
     display: none;
   }
   /* //this includes the hamburger icon */
 }
+
+/* //do I use this below? */
+/* @media screen and (max-width: 1200px) and (min-width: 1025px) {
+  .hide-for-desktop {
+    display: none;
+  }
+  /* //this includes the hamburger icon */
+/* } */ 
 
 
 /* grid-template-columns: minmax(200px, 1.167fr) 0.45fr 0.25fr 0.3fr 0.8fr; */
